--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,143 +1,213 @@
-body{
-    font-family: 'Space Mono', monospace !important;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    background: hsl(185, 41%, 84%);
+body {
+  font-family: "Space Mono", monospace !important;
+  height: 100vh;
+
+  background: hsl(185, 41%, 84%);
+  margin: 0;
+  padding: 0;
+  @media (max-width: 1024px) {
+    height: 100%;
+  }
 }
 
+.container {
+  max-width: 800px;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @media (max-width: 1024px) {
+    max-width: 100%;
+    margin: 0 auto;
+  }
 
-
-.calculadora{
+  .calculadora {
     background: hsl(0, 0%, 100%);
     border-radius: 16px;
-    padding: 24px;
+    padding: 32px;
     max-width: 800px;
-    max-height: 400px;
-    margin: 0 auto;
-    display: flex;
-    @media(max-width: 1024px){
-        max-height: max-content;
-        width: 80%;
-        margin: 0 auto;
+    height: max-content;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    grid-gap: 32px;
+    @media (max-width: 1024px) {
+      margin: 32px 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
-    .container{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        justify-content: center;
-        grid-gap: 32px;
-        @media(max-width: 767px){
-            grid-template-columns: 1fr;
-            align-items: center;
-            justify-content: center;
+    .insert__dados {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      label {
+        font-size: 16px;
+        font-size: 14px;
+        color: hsl(186, 14%, 43%);
+        font-weight: 700;
+        display: block;
+        margin-bottom: 8px;
+      }
+      #bill,
+      #peoples {
+        padding: 8px 16px;
+        font-size: 24px;
+        color: hsl(183, 100%, 15%);
+        font-weight: 700;
+        background: hsl(189, 41%, 97%);
+        outline: none;
+        border: none;
+        border-radius: 8px;
+        text-align: right;
+        display: inline-flex;
+        @media (max-width: 1024px) {
+          width: 90%;
+          margin: 0 auto;
         }
-        .insert__dados{
-            label {
-                font-size: 16px;
-                font-size: 14px;
-                color: hsl(186, 14%, 43%);
-                font-weight: 700;
-                display: block;
-                margin-bottom: 8px;
-                
-            }
-            input{
-                font-size: 24px;
-                color: hsl(183, 100%, 15%);
-                font-weight: 700;
-                background: hsl(189, 41%, 97%);
-                outline: none;
-                border: none;
-                border-radius: 8px;
-                display: inline-flex;
-                align-items: flex-end;
-            }
+      }
 
-            .tip{
-                margin: 32px 0;
-                p {
-                    font-size: 14px;
-                    color: hsl(186, 14%, 43%);
-                    font-weight: 700;
-                }
-                .tip__wrapper{
-                    display: flex;
-                    flex-wrap: wrap;
-                    .button__tip{
-                        background: hsl(183, 100%, 15%);
-                        margin-right: 16px;
-                        display: inline-flex;
-                        justify-content: center;
-                        border: 0;
-                        outline: none;
-                        padding: 8px 16px;
-                        border-radius: 8px;
-                        width: 80px;
-                        text-align: center;
-                        margin-bottom: 16px;
-                        color: #fff;
-                        font-size: 18px;
-                        font-family: 'Space Mono', monospace;
-                    }
-                }
-
-            }
+      .tip {
+        margin: 32px 0;
+        p {
+          font-size: 14px;
+          color: hsl(186, 14%, 43%);
+          font-weight: 700;
         }
-
-
-        /* DISPLAY*/
-        .display__result{
-            border-radius: 16px;
-            padding: 16px 32px;
+        .tip__wrapper {
+          display: grid;
+          grid-template-columns: repeat(auto-fit, 80px);
+          justify-content: center;
+          gap: 32px;
+          .button__tip {
             background: hsl(183, 100%, 15%);
-            .tip__info{
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                p{
-                    color: #fff;
-                    font-size: 16px;
-                    font-weight: 700;
-                }
-                span{
-                    font-size: 32px;
-                    color: hsl(172, 67%, 45%);
-                    font-weight: 700;
-                }
-            }
+            display: inline-flex;
+            justify-content: center;
+            border: 0;
+            outline: none;
+            padding: 8px 16px;
+            border-radius: 8px;
+            width: 80px;
+            text-align: center;
+            color: #fff;
+            font-size: 18px;
+            font-family: "Space Mono", monospace;
+          }
 
-            .tip__total{
-                padding-top: 32px;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                p{
-                    color: #fff;
-                    font-size: 16px;
-                    font-weight: 700;
-                }
-                span{
-                    font-size: 32px;
-                    color: hsl(172, 67%, 45%);
-                    font-weight: 700;
-                }
-
-            }
+          input {
+            text-align: center;
+            border: none;
+            outline-color: hsl(183, 100%, 15%);
+            border-radius: 8px;
+            padding: 8px 16px;
+            font-size: 18px;
+            font-family: "Space Mono", monospace;
+            background: hsl(189, 41%, 97%);
+          }
         }
-
-
-       
+      }
     }
+
+    .number__peoples {
+      position: relative;
+      ion-icon {
+        position: absolute;
+        bottom: 26px;
+        left: 10px;
+        color: hsl(186, 14%, 43%);
+      }
+    }
+
+    /* DISPLAY*/
+    .display__result {
+      border-radius: 16px;
+      padding: 16px 32px;
+      background: hsl(183, 100%, 15%);
+      display: flex;
+      flex-direction: column;
+      @media (max-width: 1024px) {
+        max-width: 100%;
+        min-width: 300px;
+        margin: 0 auto;
+        justify-content: center;
+      }
+      .tip__info {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        p {
+          color: #fff;
+          font-size: 16px;
+          font-weight: 700;
+          span {
+            display: block;
+            font-size: 12px;
+            color: #eee;
+          }
+        }
+        span {
+          padding-top: 8px;
+          font-size: 32px;
+          color: hsl(172, 67%, 45%);
+          font-weight: 700;
+        }
+      }
+
+      .tip__total {
+        padding-top: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        p {
+          color: #fff;
+          font-size: 16px;
+          font-weight: 700;
+          span {
+            display: block;
+            font-size: 12px;
+            color: #eee;
+          }
+        }
+        span {
+          font-size: 32px;
+          color: hsl(172, 67%, 45%);
+          font-weight: 700;
+        }
+      }
+      .btnReset {
+        padding: 16px 32px;
+        text-align: center;
+        width: 100%;
+        background: hsl(172, 67%, 45%);
+        border: none;
+        outline: 0;
+        display: block;
+        margin: 64px auto 0 auto;
+        font-weight: 700;
+        font-size: 18px;
+        border-radius: 8px;
+      }
+    }
+  }
 }
 
-body.error input{
-    border: 1px solid red !important;
+body.error input {
+  border: 1px solid red !important;
 }
 
 .msg {
-    color: red;
+  color: red;
+  font-size: 12px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.attribution {
+  margin-top: 32px;
 }
